--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,118 @@
-* {
-  box-sizing: border-box;
-}
-
-html body {
-  padding: 0;
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap");
+html, body {
+  color: #191919;
+  font-family: "Inter", sans-serif;
+  font-size: 15;
   font-weight: 400;
 }
 
-.border {
-  border: 1 px solid #000000;
+.btn-yellow {
+  background-color: #F9D783;
+  border: solid 1px #F9D783;
+  color: #191919;
+  padding: 8px 25px;
+  font-weight: 600;
+  border-radius: 25px;
+  font-size: 16px;
+}
+.btn-yellow i {
+  margin-left: 5px;
+  font-size: 0.5em;
+}
+.btn-yellow:hover {
+  background-color: #191919;
+  border: 1px solid;
+  color: #f0ef09;
+}
+
+header {
+  background-color: beige;
+  display: flex;
+  padding: 20px;
+}
+header .container {
+  display: flex;
+  gap: 70px;
+  align-items: center;
+  justify-content: space-between;
+}
+header .container .menu-bars {
+  font-size: 25px;
+  border: none;
+  background-color: transparent;
+}
+@media (min-width: 992px) {
+  header .container .menu-bars {
+    display: none;
+  }
+}
+header .container .menu {
+  display: none;
+  flex: 1;
+}
+@media (min-width: 992px) {
+  header .container .menu {
+    display: block;
+  }
+}
+header .container .menu .top-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #DAD9D3;
+  padding-bottom: 10px;
+}
+header .container .menu .contact-information {
+  display: flex;
+}
+header .container .menu .content-box {
+  margin-right: 30px;
+  border-right: 1px solid #DAD9D3;
+  padding-right: 20px;
+  font-family: "Inter", sans-serif;
+  font-size: 15;
+  font-weight: 300;
+}
+header .container .menu .content-box i {
+  margin-right: 5px;
+  font-size: 1.2em;
+  color: #666666;
+}
+header .container .menu .content-box.last {
+  border: none;
+}
+header .container .social-media a {
+  color: #191919;
+  font-size: 1.2rem;
+  margin-left: 10px;
+}
+header .container .social-media a:hover {
+  color: #666666;
+}
+header .container .main-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+}
+header .container nav a {
+  color: #191919;
+  text-decoration: none;
+  margin-right: 35px;
+  position: relative;
+}
+header .container nav a.active {
+  font-weight: 500;
+}
+header .container nav a.active::after, header .container nav a:hover::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  font-weight: 500;
+  height: 2px;
+  width: 15px;
+  background: #191919;
+  left: 50%;
+  bottom: -3px;
+  transform: translate(calc(50% - 15px));
 }
