--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -67,10 +67,19 @@ header{
                 justify-content: space-between;
                 border-bottom: 1px solid #DAD9D3;
                 padding-bottom: 10px;
+
+                @media(min-width: 1200px){
+                    justify-content: space-between;
+                }
             }
 
+
             .contact-information{
-                display: flex;
+                display: none;
+
+                @media(min-width: 1200px){
+                    display: flex;
+                }
             
             }
 
@@ -115,6 +124,8 @@ header{
             justify-content: space-between;
             align-items: center;
             padding-top: 10px;
+
+            
 
         } 
 
