--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,6 +45,27 @@ html, body {
   color: #f0ef09;
 }
 
+.btn-black {
+  background-color: #191919;
+  border: solid 1px #191919;
+  color: white;
+  padding: 15px 25px;
+  font-weight: 600;
+  border-radius: 25px;
+  font-size: 16px;
+  font-family: "Inter";
+  font-weight: normal;
+}
+.btn-black i {
+  margin-left: 5px;
+  font-size: 0.5em;
+}
+.btn-black:hover {
+  background-color: #191919;
+  border: 1px solid;
+  color: #f0ef09;
+}
+
 header {
   background-color: #F0EFE9;
   display: flex;
@@ -268,4 +289,58 @@ header .container .btn-login {
   font-weight: normal;
   font-style: normal;
   color: rgba(25, 25, 25, 0.7);
+}
+
+.aboutCompany .container {
+  display: flex;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  justify-content: center;
+}
+.aboutCompany .container img {
+  width: 533px;
+  height: 615;
+  margin-left: 50px;
+  margin-right: 170px;
+}
+.aboutCompany .container .aboutCompanyContent {
+  justify-content: space-between;
+}
+.aboutCompany .container .aboutCompanyContent h4 {
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  color: #f94d1c;
+}
+.aboutCompany .container .aboutCompanyContent h3 {
+  font-family: "DM Sans";
+  font-size: 45px;
+  font-weight: bold;
+  font-style: normal;
+  color: #191919;
+  margin-bottom: 37px;
+}
+.aboutCompany .container .aboutCompanyContent p {
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  color: rgba(25, 25, 25, 0.7);
+  margin-bottom: 70px;
+}
+.aboutCompany .container .aboutCompanyContent .play-button {
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  text-align: center;
+  color: #191919;
+}
+.aboutCompany .container .aboutCompanyContent .play-button i {
+  font-size: 2rem;
+  margin-left: 39px;
+}
+.aboutCompany .container .aboutCompanyContent .play-button:hover {
+  color: #f94d1c;
 }
