--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ html, body {
   background-color: #191919;
   border: solid 1px #191919;
   color: white;
-  padding: 15px 25px;
+  padding: 10px 25px;
   font-weight: 600;
   border-radius: 25px;
   font-size: 16px;
@@ -327,9 +327,17 @@ header .container .btn-login {
   font-weight: normal;
   font-style: normal;
   color: rgba(25, 25, 25, 0.7);
-  margin-bottom: 70px;
+  padding-bottom: 30px;
 }
-.aboutCompany .container .aboutCompanyContent .play-button {
+.aboutCompany .container .aboutCompanyContent .icon-pack {
+  display: flex;
+  align-items: center;
+}
+.aboutCompany .container .aboutCompanyContent .icon-pack a {
+  display: flex;
+  align-items: center;
+}
+.aboutCompany .container .aboutCompanyContent .icon-pack .play-button {
   font-family: "Inter";
   font-size: 16px;
   font-weight: normal;
@@ -337,10 +345,83 @@ header .container .btn-login {
   text-align: center;
   color: #191919;
 }
-.aboutCompany .container .aboutCompanyContent .play-button i {
-  font-size: 2rem;
-  margin-left: 39px;
+.aboutCompany .container .aboutCompanyContent .icon-pack .play-button i {
+  font-size: 3rem;
+  padding-left: 30px;
+  padding-right: 8px;
 }
-.aboutCompany .container .aboutCompanyContent .play-button:hover {
+.aboutCompany .container .aboutCompanyContent .icon-pack .play-button:hover {
   color: #f94d1c;
+  text-decoration: none;
+}
+
+.companyServices {
+  display: flex;
+  align-content: center;
+  background-color: #F0EFE9;
+}
+.companyServices .container .content-header {
+  padding-top: 120px;
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  font-style: normal;
+  color: #f94d1c;
+}
+.companyServices .container h3 {
+  font-family: "DM Sans";
+  font-size: 45px;
+  font-weight: bold;
+  font-style: normal;
+  text-align: left;
+  color: #191919;
+  padding-bottom: 48px;
+}
+.companyServices .container .stacks-showcase {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 25px;
+  padding-bottom: 48px;
+}
+.companyServices .container .stacks-showcase .squares-button {
+  background-color: #ffffff;
+  padding: 30px 35px;
+  text-decoration: none;
+}
+.companyServices .container .stacks-showcase .squares-button h4 {
+  padding-top: 30px;
+  font-family: "DM Sans";
+  font-size: 22px;
+  font-weight: bold;
+  font-style: normal;
+  color: #191919;
+}
+.companyServices .container .stacks-showcase .squares-button p {
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  color: rgba(25, 25, 25, 0.7);
+}
+.companyServices .container .stacks-showcase .squares-button .icon-square {
+  display: flex;
+  justify-content: end;
+}
+.companyServices .container .stacks-showcase .squares-button .icon-square i {
+  font-size: 45px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  color: #191919;
+}
+.companyServices .container .stacks-showcase .squares-button:hover {
+  background-color: #F9D783;
+}
+.companyServices .container .stacks-showcase .squares-button:hover i {
+  color: #ffffff;
+}
+.companyServices .container .singleButton {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 119px;
 }
