--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&family=Inter:wght@300;400;500;700;900&display=swap");
 html, body {
@@ -76,22 +75,19 @@ html, body {
   font-family: "Inter";
   font-weight: normal;
 }
-
 .btn-black i {
   margin-left: 5px;
-  font-size: 1em;
+  font-size: 0.5em;
   opacity: 1;
-  height: 17px;
-  /***** På denna del är det som ikonen ändras *****/
 }
-
 .btn-black:hover {
   background-color: #F9D783;
   border: 1px solid;
   color: #191919;
-}
-.btn-black:hover i {
   text-decoration: none;
+}
+.btn-black:hover span {
+  text-decoration: underline;
 }
 
 header {
@@ -453,4 +449,83 @@ header .container .btn-login {
   display: flex;
   justify-content: center;
   margin-bottom: 119px;
+}
+
+.whyChooseUs .container {
+  display: flex;
+  margin-top: 43px;
+  width: 1620px;
+  height: 630.3px;
+}
+.whyChooseUs .container .leftSection h3 {
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  text-align: left;
+  color: #f94d1c;
+}
+.whyChooseUs .container .leftSection h4 {
+  font-family: "DM Sans";
+  font-size: 45px;
+  font-weight: bold;
+  font-style: normal;
+  text-align: left;
+  color: #191919;
+  margin-bottom: 43px;
+}
+.whyChooseUs .container .leftSection .stackIconArg {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  margin-bottom: 25px;
+}
+.whyChooseUs .container .leftSection .stackIconArg img {
+  width: 55px;
+  height: 55px;
+  margin-right: 25px;
+}
+.whyChooseUs .container .leftSection .stackIconArg .textStack h5 {
+  font-family: "DM Sans";
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 33px;
+  font-style: normal;
+  text-align: left;
+  color: #191919;
+}
+.whyChooseUs .container .leftSection .stackIconArg .textStack p {
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 28px;
+  font-style: normal;
+  text-align: left;
+  letter-spacing: -10px;
+  color: rgba(25, 25, 25, 0.7);
+}
+.whyChooseUs .container .rightSection {
+  width: 1057px;
+  height: 584px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+.whyChooseUs .container .rightSection img {
+  margin-bottom: 98px;
+  position: absolute;
+  left: 110px; /* Adjust the left property to move the image to the right */
+  top: 3%;
+  width: 84%;
+  height: 80%;
+}
+.whyChooseUs .container .rightSection .blueBox {
+  position: absolute;
+  top: 32%;
+  background-color: #F0EFE9;
+  z-index: -1; /* Set a negative z-index to place it behind the image */
+  overflow: visible;
+  width: 884px;
+  height: 398px;
 }
