--- a/CSS/style.css
+++ b/CSS/style.css
@@ -529,3 +529,21 @@ header .container .btn-login {
   width: 884px;
   height: 398px;
 }
+
+.global-projects .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.global-projects .container .top-global {
+  margin-top: 50px;
+}
+.global-projects .container .global-projects-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 25px;
+}
+.global-projects .container .global-projects-box .box-container img {
+  width: 540px;
+  height: 250px;
+}
