--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,6 +90,33 @@ html, body {
   text-decoration: underline;
 }
 
+.btn-black-btm {
+  background-color: #191919;
+  border: solid 1px #191919;
+  color: white;
+  padding: 10px 25px;
+  font-weight: 600;
+  border-radius: 25px;
+  font-size: 16px;
+  font-family: "Inter";
+  font-weight: normal;
+  margin-bottom: 92px;
+}
+.btn-black-btm i {
+  margin-left: 5px;
+  font-size: 0.5em;
+  opacity: 1;
+}
+.btn-black-btm:hover {
+  background-color: #F9D783;
+  border: 1px solid;
+  color: #191919;
+  text-decoration: none;
+}
+.btn-black-btm:hover span {
+  text-decoration: underline;
+}
+
 header {
   background-color: #F0EFE9;
   display: flex;
@@ -537,6 +564,24 @@ header .container .btn-login {
 }
 .global-projects .container .top-global {
   margin-top: 50px;
+  margin-bottom: 85px;
+}
+.global-projects .container .top-global h3 {
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  text-align: center;
+  color: #f94d1c;
+}
+.global-projects .container .top-global h4 {
+  font-family: "DM Sans";
+  font-size: 45px;
+  font-weight: bold;
+  line-height: 55px;
+  font-style: normal;
+  text-align: center;
+  color: #191919;
 }
 .global-projects .container .global-projects-box {
   display: grid;
@@ -546,4 +591,44 @@ header .container .btn-login {
 .global-projects .container .global-projects-box .box-container img {
   width: 540px;
   height: 250px;
+  margin-bottom: 30px;
+}
+.global-projects .container .global-projects-box .box-container h4 {
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 33px;
+  font-style: normal;
+  text-align: left;
+  color: #191919;
+  border-bottom: 1px solid #DAD9D3;
+  padding-bottom: 10px;
+}
+.global-projects .container .global-projects-box .box-container .linkB {
+  display: flex;
+  justify-content: end;
+  color: #191919;
+  margin-bottom: 40px;
+  padding-top: 40px;
+}
+.global-projects .container .global-projects-box .box-container .linkB span {
+  font-family: "Inter";
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  text-align: center;
+  color: #191919;
+  margin-right: 2px;
+}
+.global-projects .container .global-projects-box .box-container .linkB i {
+  width: 16px;
+  height: 16px;
+  color: #191919;
+}
+.global-projects .container .global-projects-box .box-container .linkB:hover {
+  color: #191919;
+  text-decoration: none;
+}
+.global-projects .container .global-projects-box .box-container .linkB:hover span {
+  text-decoration: underline;
 }
